css fix text align footer

--- a/css/nomads-styles.css
+++ b/css/nomads-styles.css
@@ -359,6 +359,7 @@ header nav {display: none;}
 }
 
 @media(max-width:768px){
+  .contact p {text-align:center;}
 .home .required {margin-bottom:20px;display: block;} 
 header nav ul {width: 100%;}
 p {font-size:16px;}
